fix wrong data model type

--- a/db/seeds/attributes.yml
+++ b/db/seeds/attributes.yml
@@ -40,7 +40,7 @@
 
 - api: protein_molecular_mass_uniprot
   dataset: uniprot
-  datamodel: classification
+  datamodel: distribution
 
 - api: protein_ptms_uniprot
   dataset: uniprot
