--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,9 +3,8 @@ version: "3"
 services:
   app:
     image: ruby:3.0.2
-#    environment:
-#      TOGODX_SERVER_DATABASE_HOST: db
-#      TOGODX_SERVER_DATABASE_PASSWORD:
+    env_file:
+      - .env
     command: bash -c "bundle install && rm -f tmp/pids/server.pid && rails s -b '0.0.0.0'"
     volumes:
       - .:/app
@@ -16,16 +15,15 @@ services:
     depends_on:
       - db
 
-#  db:
-#    image: postgres:13.4
-#    environment:
-#      POSTGRES_USER: togodx_server
-#      POSTGRES_PASSWORD:
-#    volumes:
-#      - db_data:/var/lib/postgresql/data
-#    ports:
-#      - "5432:5432"
+  db:
+    image: postgres:14
+    env_file:
+      - .env
+    volumes:
+      - ./data/pg_data:/var/lib/postgresql/data
+      - ./docker/postgres/postgres.conf:/etc/postgresql/postgresql.conf:ro
+    ports:
+      - "5432:5432"
 
 volumes:
   app_bundle:
-#  db_data:
