--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,7 +7,7 @@ services:
       - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - app_sockets:/tmp/sockets:ro
     ports:
-      - "80:80"
+      - "${NGINX_PORT:-80}:80"
     depends_on:
       - app
     <<: &logging
@@ -22,29 +22,28 @@ services:
     environment:
       RAILS_ENV: production
       RAILS_MAX_THREADS: 10
-      RAILS_SERVE_STATIC_FILES: 1
-#      TOGODX_SERVER_DATABASE_HOST: db
-#      TOGODX_SERVER_DATABASE_PASSWORD:
+      WEB_CONCURRENCY: 10
+    env_file:
+      - .env
     command: bash -c "bundle install && rm -f tmp/pids/server.pid && rails s -b '0.0.0.0'"
     volumes:
       - .:/app
-      - app_sockets:/app/tmp/sockets
       - app_bundle:/usr/local/bundle
+      - app_sockets:/app/tmp/sockets
     working_dir: /app
-#    depends_on:
-#      - db
+    depends_on:
+      - db
     <<: *logging
 
-#  db:
-#    image: postgres:13.4
-#    environment:
-#      POSTGRES_USER: togodx_server
-#      POSTGRES_PASSWORD:
-#    volumes:
-#      - db_data:/var/lib/postgresql/data
-#    <<: *logging
+  db:
+    image: postgres:14
+    env_file:
+      - .env
+    volumes:
+      - ./data/pg_data:/var/lib/postgresql/data
+      - ./docker/postgres/postgres.conf:/etc/postgresql/postgresql.conf:ro
+    <<: *logging
 
 volumes:
   app_bundle:
   app_sockets:
-#  db_data:
