listen unix socket on production

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -29,12 +29,8 @@ http {
   server_tokens off;
 
   upstream puma {
-    server app:3000;
+    server unix:/tmp/sockets/puma.sock fail_timeout=0;
   }
-
-#   upstream unicorn {
-#     server unix:/tmp/sockets/unicorn.sock fail_timeout=0;
-#   }
 
   server {
     listen 80;
