--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 /config/credentials.yml.enc
+/config/database.yml
 
 /.env
 /docker-compose.yml
