--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-*
+/db/schema.rb
 
 # Ignore all logfiles and tempfiles.
 /log/*
@@ -33,4 +34,6 @@
 /config/database.yml
 
 /.env
+/data
 /docker-compose.yml
+/vendor/bin
