--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -3,27 +3,24 @@ version: "3"
 services:
   app:
     image: ruby:3.0.2
-    env_file:
-      - ../.env
     command: bash -c "bundle install && rm -f tmp/pids/server.pid && rails s -b '0.0.0.0'"
     volumes:
       - .:/app
       - app_bundle:/usr/local/bundle
     working_dir: /app
     ports:
-      - "3000:3000"
+      - "${APP_PORT:-3000}:3000"
     depends_on:
       - db
 
   db:
     image: postgres:14
-    env_file:
-      - ../.env
+    environment:
+      POSTGRES_USER: "${POSTGRES_USER:-togodx}"
+      POSTGRES_PASSWORD: "${POSTGRES_PASSWORD:-changeme}"
     volumes:
-      - ./data/pg_data:/var/lib/postgresql/data
+      - ./tmp/pg_data:/var/lib/postgresql/data
       - ./docker/postgres/postgres.conf:/etc/postgresql/postgresql.conf:ro
-    ports:
-      - "5432:5432"
 
 volumes:
   app_bundle:
