--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 /config/credentials.yml.enc
+/config/attributes.yml
 /config/database.yml
 
 /.env
